bk_ida/gccida/g1/emit_library_call_value_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3905:1: error: must use 'enum' tag to refer to type 'libcall_type'
libcall_type fn_type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3906:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outmode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3901:6: error: conflicting types for 'emit_library_call_value_1'
rtx  emit_library_call_value_1( 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:213:12: note: previous declaration is here
static rtx emit_library_call_value_1            PARAMS ((int, rtx, rtx,
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3913:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3914:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3922:6: error: use of undeclared identifier 'overflow_arg_area'
rtx *overflow_arg_area; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3923:4: error: expected ';' after expression
rtx v20; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3923:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // rdi 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3913:12: note: 'v10' declared here
tree_node *v10; // rax 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3924:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v21; // rdx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3925:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3925:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3929:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3937:27: error: expected expression
emit_library_call_value_1::arg *v34; // r14 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3942:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3943:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3944:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v41; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3951:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v48; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3962:27: error: expected expression
emit_library_call_value_1::arg *v59; // rbx 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3962:1: error: redefinition of label 'emit_library_call_value_1'
emit_library_call_value_1::arg *v59; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/calls.c:3937:1: note: previous definition is here
emit_library_call_value_1::arg *v34; // r14 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_library_call_value_1/src/obj/calls.o] Error 1
